bk_ida/gccida/c1/delete_output_reload
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/reload1.c:8041:4: error: expected ';' after expression
rtx in; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/reload1.c:8041:5: error: use of undeclared identifier 'in'
rtx in; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/reload1.c:8043:4: error: expected ';' after expression
rtx out_reg; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/reload1.c:8043:5: error: use of undeclared identifier 'out_reg'
rtx out_reg; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/reload1.c:8062:4: error: expected ';' after expression
rtx v29; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/reload1.c:8062:5: error: use of undeclared identifier 'v29'
rtx v29; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/reload1.c:8065:4: error: expected ';' after expression
rtx v32; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/reload1.c:8065:5: error: use of undeclared identifier 'v32'
rtx v32; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/reload1.c:8067:4: error: expected ';' after expression
rtx dead_insn; // [rsp+18h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/reload1.c:8067:5: error: use of undeclared identifier 'dead_insn'
rtx dead_insn; // [rsp+18h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/reload1.c:8072:1: error: use of undeclared identifier 'dead_insn'
dead_insn = spill_reg_store[last_reload_reg]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/reload1.c:8088:1: error: use of undeclared identifier 'in'
in = rld[v5 - 1].in; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/reload1.c:8089:6: error: use of undeclared identifier 'in'
if ( in ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/reload1.c:8091:17: error: use of undeclared identifier 'in'
if ( *( _WORD *)in == 66 || reload_inheritance_insn[v5 + 179] ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/reload1.c:8092:1: error: use of undeclared identifier 'in'
in = rld[v5 - 1].in_reg; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/reload1.c:8093:20: error: use of undeclared identifier 'in'
while ( *( _WORD *)in == 63 ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/reload1.c:8094:1: error: use of undeclared identifier 'in'
in = in->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/reload1.c:8094:6: error: use of undeclared identifier 'in'
in = in->fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/reload1.c:8096:19: error: use of undeclared identifier 'in'
if ( rtx_equal_p( in, rtx) ) 
                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/delete_output_reload/src/obj/reload1.o] Error 1
